Closed Bug 386820 Opened 18 years ago Closed 18 years ago

Gmail , compose mail, cursor missing in textfield

Categories

(Core :: DOM: Events, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: Peter6, Assigned: smaug)

References

Details

(Keywords: regression)

Attachments

(2 files)

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007070400 Minefield/3.0a7pre ID:2007070400 repro: Open FF Open Gmail Press compose Mail and place the cursor in the textfield result: No cursor visable regressionwindow: works in 20070703_0613_firefox-3.0a7pre.en-US.win32 fails in 20070703_0644_firefox-3.0a7pre.en-US.win32 http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1183468380&maxdate=1183470239 -> Bug 238987
Flags: blocking1.9?
Assignee: nobody → Olli.Pettay
Cursor is visible when plaintext editing is used.
Status: NEW → ASSIGNED
(In reply to comment #1) > Cursor is visible when plaintext editing is used. > Likewise when you reply a mail with rich formatting
Attached patch possibleSplinter Review
Comment on attachment 270883 [details] [diff] [review] possible ...patch. But need to think a bit if this breaks something else.
Attachment #270883 - Attachment is patch: true
Attachment #270883 - Attachment mime type: text/x-patch → text/plain
No cursor in thunderbird compose window today...
Attached patch proposed patchSplinter Review
This should work for now. If bug 235441 gets fixed, one may need to add a listener for bubbling phase to catch the case when focus is dispatched to the editor's piTarget.
Attachment #270897 - Flags: superreview?(peterv)
Attachment #270897 - Flags: review?(peterv)
The patch fixes Thunderbird too.
Attachment #270897 - Flags: superreview?(peterv)
Attachment #270897 - Flags: superreview+
Attachment #270897 - Flags: review?(peterv)
Attachment #270897 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Thanks for the quick response and fix Olli
(In reply to comment #8) > Checked in. In my SM-Trunk-build 2007070505 the cursor only appears, when I click into the text. Without the click, the bug always exists.
I'm seeing the same thing in Thunderbird message composition window. And arrowing around doesn't move the caret once clicking as gotten it to appear. This makes selecting text and editing challenging.
(In reply to comment #12) > And > arrowing around doesn't move the caret once clicking as gotten it to > appear. This makes selecting text and editing challenging. > I see this too, but afaik that is an older regression, possibly from contentEditable. I'll look at the other cursor visibility problem.
(In reply to comment #13) > I'll look at the other cursor visibility problem. > Actually, https://bugzilla.mozilla.org/show_bug.cgi?id=386872#c2 says that the visibility problem started 6-28, so that cursor visibility problem isn't the same as this one. contentEditable was checked in 6-27 http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-06-27&maxdate=2007-06-28&cvsroot=%2Fcvsroot So, I'd say that cursor visibility problem is bug 386174. The problem with arrow keys is bug 386189.
This problem still exists as of today. Is there some doubt?
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: