Bug 386820, Gmail, compose mail, cursor missing in (rich formatting) textfield, r+sr=peterv